--- a/\RainbowTabs/\RainbowTabs/Base.lproj/Main.storyboard
+++ b/\RainbowTabs/\RainbowTabs/Base.lproj/Main.storyboard
@@ -8,40 +8,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Yellow-->
-        <scene sceneID="gXO-hN-WOI">
-            <objects>
-                <viewController id="aXb-lH-op4" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="vIj-MO-IbE">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="t0f-bz-ayf"/>
-                        <color key="backgroundColor" systemColor="systemYellowColor"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Yellow" id="Sfm-Tz-KaC">
-                        <color key="badgeColor" systemColor="systemPinkColor"/>
-                    </tabBarItem>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="YGX-4L-wTv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-955" y="425"/>
-        </scene>
-        <!--Red-->
-        <scene sceneID="KJc-rL-w5w">
-            <objects>
-                <viewController id="Spd-lY-owS" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="6XH-dH-z6C">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="ToE-bY-Sgu"/>
-                        <color key="backgroundColor" systemColor="systemRedColor"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Red" id="2bg-ta-GlX"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="TDx-Mv-XYb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-955" y="-182"/>
-        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="bDv-IB-Gir">
             <objects>
@@ -54,14 +20,115 @@
                     <connections>
                         <segue destination="Spd-lY-owS" kind="relationship" relationship="viewControllers" id="r21-Af-W9k"/>
                         <segue destination="aXb-lH-op4" kind="relationship" relationship="viewControllers" id="I1y-FO-Df0"/>
+                        <segue destination="mac-pH-R38" kind="relationship" relationship="viewControllers" id="FxA-g5-G7G"/>
+                        <segue destination="bL2-fg-2Yf" kind="relationship" relationship="viewControllers" id="HCW-gN-din"/>
+                        <segue destination="Hfw-OJ-qB1" kind="relationship" relationship="viewControllers" id="KkG-eE-EwI"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PvY-JG-wn3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1843" y="122"/>
         </scene>
+        <!--Red-->
+        <scene sceneID="KJc-rL-w5w">
+            <objects>
+                <viewController id="Spd-lY-owS" customClass="RedViewController" customModule="_RainbowTabs" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6XH-dH-z6C">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="ToE-bY-Sgu"/>
+                        <color key="backgroundColor" systemColor="systemRedColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Red" image="r.square.fill" catalog="system" selectedImage="r.square.fill" id="2bg-ta-GlX">
+                        <color key="badgeColor" systemColor="systemYellowColor"/>
+                    </tabBarItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TDx-Mv-XYb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3265" y="880"/>
+        </scene>
+        <!--Green-->
+        <scene sceneID="JYA-nW-hk1">
+            <objects>
+                <viewController id="bL2-fg-2Yf" customClass="GreenViewController" customModule="_RainbowTabs" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="kC8-bh-PkS">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="fet-4q-0EJ"/>
+                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Green" image="g.square.fill" catalog="system" selectedImage="g.square.fill" id="Oii-Bb-tjX"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vrc-cA-Mkd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-639" y="880"/>
+        </scene>
+        <!--Yellow-->
+        <scene sceneID="gXO-hN-WOI">
+            <objects>
+                <viewController id="aXb-lH-op4" customClass="YellowViewController" customModule="_RainbowTabs" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vIj-MO-IbE">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="t0f-bz-ayf"/>
+                        <color key="backgroundColor" systemColor="systemYellowColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Yellow" image="y.square.fill" catalog="system" selectedImage="y.square.fill" id="Sfm-Tz-KaC">
+                        <color key="badgeColor" systemColor="systemPinkColor"/>
+                    </tabBarItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YGX-4L-wTv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1516" y="880"/>
+        </scene>
+        <!--Orange-->
+        <scene sceneID="NWT-02-yPr">
+            <objects>
+                <viewController id="mac-pH-R38" customClass="OrangeViewController" customModule="_RainbowTabs" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9VS-No-EIK">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="5Bk-WO-hXk"/>
+                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Orange" image="o.square.fill" catalog="system" selectedImage="o.square.fill" id="O32-Gy-opw"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UR4-lt-8fL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2381" y="880"/>
+        </scene>
+        <!--Blue-->
+        <scene sceneID="1RQ-Gd-ZwA">
+            <objects>
+                <viewController id="Hfw-OJ-qB1" customClass="BlueViewController" customModule="_RainbowTabs" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="LSW-Qz-cL6">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="DIV-4O-RYq"/>
+                        <color key="backgroundColor" systemColor="systemIndigoColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Blue" image="b.square.fill" catalog="system" selectedImage="b.square.fill" id="wKU-Ja-ObK"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BSk-id-OEk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="257" y="880"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="b.square.fill" catalog="system" width="128" height="114"/>
+        <image name="g.square.fill" catalog="system" width="128" height="114"/>
+        <image name="o.square.fill" catalog="system" width="128" height="114"/>
+        <image name="r.square.fill" catalog="system" width="128" height="114"/>
+        <image name="y.square.fill" catalog="system" width="128" height="114"/>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemIndigoColor">
+            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemPinkColor">
             <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
